# RDBMS-challenge

./: .gitignore  .pre-commit-config.yaml  App.tsx  CONTRIBUTING.md  Makefile  README.md  comprehensive_test.py  debug_create_table.py  docker-compose.yml  index.html  package-lock.json  package.json  simple_test.py  test_clean.py  test_queries.py  test_query.json  types.ts
backend/: README.md  main.py  pyproject.toml  rdbms_storage.json
backend/app/: __init__.py  database.py  main.py  models.py
components/: RecruiterInfoModal.tsx  SchemaVisualizer.tsx  TableDesigner.tsx
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: index.html  metadata.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: ConsolePanel.tsx  SQLEditor.tsx  SchemaVisualizer.tsx  Sidebar.tsx  TableDataViewer.tsx  TableDesigner.tsx
frontend/src/services/: DatabaseEngine.ts
services/: DatabaseEngine.ts
